--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
+2003-10-02 Amilcar Lucas <a.lucas@tu-bs.de>
+    * Renamed KDevelop executable from gideon to kdevelop.
+    * This makes KDevelop3 OVERWRITE KDevelop 2.x instalations.
+    * Restructured the directories acording to the API documentation
+       buildtools -> has the old Project managers
+       languages -> language support (includes app_templates, file_templates, compilerplugin, pcsimporter and debugger)
+       editors -> editors support
+       vcs -> Version control systems (clearcase, cvs, perforce, svn, cvsservice and cervisia)
+
 2003-09-26 Amilcar Lucas <a.lucas@tu-bs.de>
-    * Added per target run arguments to the automake manager. 
-      These arguments are used when no Main program (Project Options...-> Run Options) is selected and the Program arguments  (Project Options...-> Run Options) are left empty. 
+    * Added per target run arguments to the automake manager.
+      These arguments are used when no Main program (Project Options...-> Run Options) is selected and the Program arguments  (Project Options...-> Run Options) are left empty.
 
 2003-09-22 Alexander Dymo <cloudtemple@mksat.net>
     * Finished GUI for enabling and disabling documentation topics in a project configuration
