Fix some problems in the docs because of the move Added documetation to buildtools Added unmaintained command to doxygen Declare some deprecated classes. Declare some unmaintained classes.

--- a/buildtools/ada/README.dox
+++ b/buildtools/ada/README.dox
@@ -5,6 +5,9 @@ It holds the project file list and tries to abstract from their specifics.
 
 \authors <a href="mailto:okellogg AT users.sourceforge.net">Oliver Kellogg</a>
 
+\unmaintained This part is currently un-maintained
+
+\deprecated This class is deprecated, use GenericProjectPart (buildtools/generic) instead.
 
 \feature Feature 1
 \feature Feature 2
