--- a/buildtools/custommakefiles/README.dox
+++ b/buildtools/custommakefiles/README.dox
@@ -1,28 +1,20 @@
-/** \class PerlSupportPart
-This is perl language support plugin.
-
+/** \class CustomProjectPart
+This is the custom build tools part.
 Put a more detailed description of your part in these lines. It can span
 over several lines. You can even use some html commands in these lines like:
 <code>This is code</code>, html links <a href="http://somelocation">link text</a>,
 and images.
 
-Consult \ref LangSupportStatus for an up to date status of this programming language support part.
-
 \authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
-\authors <a href="mailto:2nd author AT provider.com">2nd author full name</a>
-...
-\authors <a href="mailto:nth author AT provider.com">nth author full name</a>
 
-\maintainer <a href="mailto:$EMAIL$">$AUTHOR$</a>
-\maintainer <a href="mailto:2nd maintainer AT provider.com">2nd maintainer full name</a>
-...
-\maintainer <a href="mailto:nth maintainer AT provider.com">nth maintainer full name</a>
+\unmaintained This part is currently un-maintained
 
 \feature Describe the first feature
 \feature Describe the second feature
 ...
 \feature Describe the last feature
 
+\bug bugs from <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=customproject&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">customproject component in Bugzilla database</a>
 \bug Describe a the 1st bug that you know of, but probably hasn't been reported yet.
 ..
 \bug Describe a the nth bug that you know of, but probably hasn't been reported yet.
