--- a/buildtools/haskell/README.dox
+++ b/buildtools/haskell/README.dox
@@ -1,22 +1,15 @@
-/** \class PerlSupportPart
-This is perl language support plugin.
-
+/** \class HaskellProjectPart
+This is the Haskell build tool part.
 Put a more detailed description of your part in these lines. It can span
 over several lines. You can even use some html commands in these lines like:
 <code>This is code</code>, html links <a href="http://somelocation">link text</a>,
 and images.
 
-Consult \ref LangSupportStatus for an up to date status of this programming language support part.
+\authors <a href="mailto:listener AT thaldyron.com">Peter Robinson</a>
 
-\authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
-\authors <a href="mailto:2nd author AT provider.com">2nd author full name</a>
-...
-\authors <a href="mailto:nth author AT provider.com">nth author full name</a>
+\maintainer <a href="mailto:listener AT thaldyron.com">Peter Robinson</a>
 
-\maintainer <a href="mailto:$EMAIL$">$AUTHOR$</a>
-\maintainer <a href="mailto:2nd maintainer AT provider.com">2nd maintainer full name</a>
-...
-\maintainer <a href="mailto:nth maintainer AT provider.com">nth maintainer full name</a>
+\deprecated This class is deprecated, use GenericProjectPart (buildtools/generic) instead.
 
 \feature Describe the first feature
 \feature Describe the second feature
