--- a/buildtools/qmake/README.dox
+++ b/buildtools/qmake/README.dox
@@ -8,10 +8,10 @@ It will regenerate a projects .pro files dynamically as you add,remove or
 reconfigure (sub)projects. Unsupported qmake features will be left unchanged
 (hopefully) no major testing has been run yet.
 
-\authors Bernd Gehrmann <bernd AT kdevelop.org>
-\authors Thomas Hasart <thasart AT gmx.de>
+\authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
+\authors <a href="mailto:thasart AT gmx.de">Thomas Hasart</a>
 
-\maintainer Jakob Simon-Gaarde <jsgaarde AT tdcspace.dk>
+\maintainer <a href="mailto:jsgaarde AT tdcspace.dk">Jakob Simon-Gaarde </a>
 
 \feature Loads and maintains .pro files (qmake project files).
 \feature Supports subprojects and qmake scopes.
