--- a/doc/api/Architecture.dox
+++ b/doc/api/Architecture.dox
@@ -18,10 +18,10 @@ parts to distinguish, mainly:
   - src            = The core part of KDevelop
   - lib/interfaces = Plugin handler interface classes
   - parts          = The various parts using the KParts framework
-  - languages      = Programming languages \ref language-parts
-  - buildtools     = build tool systems \ref buildtool-parts
-  - vcs            = Version Control Systems \ref vcs-parts
-  - editors        = Code editors \ref editor-parts
+  - languages      = \ref language-parts
+  - buildtools     = \ref buildtool-parts
+  - vcs            = \ref vcs-parts
+  - editors        = \ref editor-parts
   .
 
 \image html Architecture.png
@@ -58,7 +58,7 @@ TopLevel class).
 All parts reside in dedicated subdirectories of the /parts directory. They can
 be viewed according to their functionalities as follows.
 
-\subsubsection language-parts Programming Language Support Parts in KDevelop
+\subsubsection language-parts Programming Language Support Parts
 
 To add support for a new language check this page \ref howToAddProgrammingLanguages
 
@@ -111,7 +111,7 @@ To add support for a new language check this page \ref howToAddProgrammingLangua
     .
   .
 
-\subsubsection buildtool-parts Build tools Parts in KDevelop
+\subsubsection buildtool-parts Build tools Parts
 
   - buildtools/ada = Ada build tool
     - (see AdaProjectPart)
@@ -140,7 +140,7 @@ To add support for a new language check this page \ref howToAddProgrammingLangua
   .
 
 
-\subsubsection vcs-parts VCS (Version Control System) Parts in KDevelop
+\subsubsection vcs-parts VCS (Version Control System) Parts
 
   - vcs/cervisia = Cervisia Support
     - (see CervisiaPart)
@@ -163,7 +163,7 @@ To add support for a new language check this page \ref howToAddProgrammingLangua
   .
 
 
-\subsubsection editor-parts editor support Specific Parts in KDevelop
+\subsubsection editor-parts editor support Specific Parts
 
 These parts implement a KTextEditor interface.
 
@@ -179,7 +179,7 @@ These parts implement a KTextEditor interface.
   .
 
 
-\subsubsection global-parts Global Parts in KDevelop
+\subsubsection global-parts Global Parts
 
 Some of the parts are considered global - that is, they effect the entire
 operation of KDevelop.
@@ -232,7 +232,7 @@ operation of KDevelop.
   .
 
 
-\subsubsection project-specific-parts Project Specific Parts in KDevelop
+\subsubsection project-specific-parts Project Specific Parts
 
   - parts/astyle = Source code formatter
     - (see AStylePart)
