--- a/doc/api/HowToAddTemplates.dox
+++ b/doc/api/HowToAddTemplates.dox
@@ -146,11 +146,11 @@ echo "done"
 \section templates_3 III. How To Add The Template To KDevelop CVS HEAD
 
 This section is for developers only. Most probably you don't have to read this!.\n
-Move the directory <code>"template-khello"</code> to <code>kdevelop/parts/appwizard/</code>
-and then add the following files in <code>kdevelop/parts/appwizard/template-khello/</code>:
+Move the directory <code>"template-khello"</code> to <code>kdevelop/languages/cpp/app_templates/</code>
+and then add the following files in <code>kdevelop/languages/cpp/app_templates/template-khello/</code>
+(in this example the language is c++ if you use other language replace cpp with the language name):
     - <code>".kdev_ignore"</code> is an empty file. It prevents KDevelop's
-    C++-parser from parsing the C++ files. This is necessary because there is a KDevelop
-    project in KDevelop's root directory (*.kdevprj and *.kdevelop).
+    C++-parser from parsing the C++ template files. This is necessary because the template files are just code templates and not real code (yet).
     - <code>".cvsignore"</code> looks like this:
 \code
 Makefile
@@ -160,7 +160,7 @@ script.local
     - <code>"Makefile.am"</code> looks like this:
     \verbinclude khello/Makefile.am
     .
-Finally add <code>"template-khello"</code> to "SUBDIRS = " in <code>kdevelop/parts/appwizard/Makefile.am</code>.
+Finally add <code>"template-khello"</code> to "SUBDIRS = " in <code>kdevelop/languages/cpp/app_templates/Makefile.am</code>.
 <b>attention:</b><br> Please test your template whether it installs and behaves correctly!
 Test, test and test again! It works? Well - now talk to the kdevelop guys so
 that they know what's going on and probably you may commit. ;)
