--- a/languages/fortran/README.dox
+++ b/languages/fortran/README.dox
@@ -6,6 +6,8 @@ over several lines. You can even use some html commands in these lines like:
 <code>This is code</code>, html links <a href="http://somelocation">link text</a>,
 and images.
 
+Consult \ref LangSupportStatus for an up to date status of this programming language support part.
+
 \authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
 
 \maintainer <a href="mailto:$EMAIL$">$AUTHOR$</a>
