--- a/languages/php/README.dox
+++ b/languages/php/README.dox
@@ -6,6 +6,8 @@ over several lines. You can even use some html commands in these lines like:
 <code>This is code</code>, html links <a href="http://somelocation">link text</a>,
 and images.
 
+Consult \ref LangSupportStatus for an up to date status of this programming language support part.
+
 \authors <a href="mailto:smeier AT kdevelop.org">Sandy Meier</a>
 
 \maintainer <a href="mailto:smeier AT kdevelop.org">Sandy Meier</a>
