More gideon->kdevelop and Gideon->KDevelop renames Updated the Doxyfile to the new code structure

--- a/languages/java/debugger/README
+++ b/languages/java/debugger/README
@@ -1,4 +1,4 @@
-JDB Support for KDevelop 3 (Gideon)
+JDB Support for KDevelop 3
 ===================================
 
 1) Status of the java debugger for KDevelop
