--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-10-04 Amilcar Lucas <a.lucas@tu-bs.de>
+    * On-line, automaticaly updated every 24H, KDevelop API Documentation can be viewed with the doctreeview.
+
 2003-10-02 Amilcar Lucas <a.lucas@tu-bs.de>
     * Renamed KDevelop executable from gideon to kdevelop.
     * This makes KDevelop3 OVERWRITE KDevelop 2.x instalations.
