--- a/parts/replace/README
+++ b/parts/replace/README
@@ -1,29 +1,3 @@
-libkdevreplace
---------------
-
-This plugin replaces a search pattern with a specified string, after letting the
-user preview and choose which replacements should take place. The operation is
-only carried out on files that are part of the current project.
-
-by Jens Dagerbo <jens.dagerbo@swipnet.se> aka teatime
-
-
-
-Planned development:
-
-# Make it possible to stop a find operation
-
-# Better user feedback
-
-# Some more code cleanups (Subclass the .ui generated file)
-
-# Better commenting (doxygen style comments).
-
-
-
-
-Current limitations:
-
-# Search/Replace will work on all matches on a line.
- There is no (nor will there likely be) a way to limit matching to only some
- matches on the same line. In practice this is not a very big problem.
+Please read the on-line, automaticaly updated KDevelop API documentation at:
+http://www.kdevelop.org
+or read the README.dox file.
