--- a/parts/sourcenav/README
+++ b/parts/sourcenav/README
@@ -1,15 +1,3 @@
-THIS PART IS OBSOLETE
-
-please leave the code until I find time to merge it into
-the history part.
-
-2002-08-10 Harald Fernengel <harry@kdevelop.org>
-
-
-Basic plugin to navigate forward/backwards through code
-
-TODO:
-add drop-down menu for forward/back button
-
-2002-04-26 Harald Fernengel <harry@kdevelop.org>
-
+Please read the on-line, automaticaly updated KDevelop API documentation at:
+http://www.kdevelop.org
+or read the README.dox file.
